# Boopt

./: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  pyproject.toml  requirements.txt
components/: dash_app.py  header.py  navbar.py  wrapper.py
pages/: dashboard.py  not_found_404.py  support.py
pages/perfil/: index.py
pages/raiox/: form.py
pages/vela/: index.py  report.py  test.py  video.py  videos_gallery.py
src/: app.py  dash_app.py
src/assets/: aggrid.css  funcoes-assessment-vendedor.js  funcoes-clientside.js  loading.css  plotly-locale-pt-br.js  style.css  tables.css  template_cadastro.xlsx
src/components/: alertas.py  footer.py  header.py  navbar.py  wrapper.py
src/pages/: dashboard.py  home.py  index.py  login.py  not_found_404.py  support.py
src/static/: template_cadastro.xlsx
src/templates/: erro_login.html  index.html  login.html  login_base.html  lp.html  recover_password.html  recovered_password.html
src/utils/: __init__.py  banco_dados.py  cache.py  email.py  empresa.py  login.py  missao.py  modelo_assessment.py  modelo_empresa.py  modelo_usuario.py  novo_usuario.py  novos_usuarios_batch.py  plotly.py  query.py  raiox.py  raiox_form.json  role.py  url.py  usuario.py  vela.py  video.py
static/: template_cadastro.xlsx
static/css/: aggrid.css  alert.css  botoes.css  card.css  content.css  grid.css  iconify.css  lp.css  (+11 more)
templates/: base.html  login.html  login_base.html  lp.html
utils/: __init__.py  login.py  missao.py  notificacoes.py  novo_usuario.py  novos_usuarios_batch.py  role.py  usuario.py  vela.py  vela_form.pickle
(+127 files in other folders)
