[project]
name = "boopt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.0",
    "dash-ag-grid>=31.2.0",
    "dash-iconify>=0.1.2",
    "dash-player>=1.1.0",
    "flask-caching>=2.3.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-pymongo>=2.3.0",
    "icecream>=2.1.3",
    "openpyxl>=3.1.5",
    "orjson>=3.10.7",
    "plotly>=5.24.0",
    "polars>=1.6.0",
    "pydantic>=2.9.1",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "xlsx2csv>=0.8.3",
    "dash-mantine-components==0.12.1",
    "xlsxwriter>=3.2.0",
    "fastexcel>=0.12.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
